...
    "description": ""
  },
  "sharePageFinishButton": "{gender,select,male{I'm Done!} female{I'm Done!} other{I'm Done!}}",
  "@sharePageFinishButton": {
    "description": ""
  },
  "sharePageAddCustomCategory": "+ Add a custom category",
  "@sharePageAddCustomCategory": {
    "description": ""
  },
  "sharePageCustomCategoryTitle": "Category Title",
  "@sharePageCustomCategoryTitle": {
    "description": ""
...
